# dioxus-bulma

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCS_UPDATE_SUMMARY.md  LICENSE  MIGRATION.md  README.md
.github/: FUNDING.yml
examples/: comprehensive_demo.rs  demo.rs  router_demo.rs  showcase.rs
src/: lib.rs  prelude.rs  router_helpers.rs  theme.rs  utils.rs
src/components/: box_.rs  breadcrumb.rs  button.rs  buttons.rs  card.rs  checkbox.rs  columns.rs  container.rs  content.rs  control.rs  delete.rs  dropdown.rs  field.rs  file.rs  hero.rs  icon.rs  image.rs  input.rs  level.rs  media.rs  menu.rs  message.rs  mod.rs  modal.rs  navbar.rs  notification.rs  pagination.rs  panel.rs  progress.rs  radio.rs  section.rs  select.rs  table.rs  tabs.rs  tag.rs  textarea.rs  tile.rs  title.rs
tests/: api_test.rs  id_prop_test.rs  prelude_test.rs  router_to_prop_test.rs
