[package]
name = "dioxus-bulma"
version = "0.1.0"
edition = "2021"
description = "Bulma CSS components for Dioxus"
license = "MIT OR Apache-2.0"
authors = ["Claude Code"]
repository = "https://github.com/your-username/dioxus-bulma"
readme = "README.md"
keywords = ["dioxus", "bulma", "components", "ui", "web"]
categories = ["gui", "web-programming"]

[dependencies]
dioxus = "0.6"
dioxus-router = { version = "0.6", optional = true }

[dev-dependencies]
dioxus = { version = "0.6", features = ["web"] }
manganis = "0.2"

[[example]]
name = "demo"
path = "examples/demo.rs"
required-features = ["web"]

[[example]]
name = "showcase"
path = "examples/showcase.rs"
required-features = ["web"]

[[example]]
name = "comprehensive_demo"
path = "examples/comprehensive_demo.rs"
required-features = ["web"]

[features]
default = []
web = ["dioxus/web"]
router = ["dioxus-router"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
