[package]
name = "dioxus-bulma"
version = "0.1.3"
edition = "2024"
description = "Bulma CSS components for Dioxus"
license = "MIT OR Apache-2.0"
authors = ["Claude Code"]
repository = "https://github.com/rexlunae/dioxus-bulma"
readme = "README.md"
keywords = ["dioxus", "bulma", "components", "ui", "web"]
categories = ["gui", "web-programming"]

[dependencies]
dioxus = "0.6"
dioxus-router = { version = "0.6", optional = true }

[dev-dependencies]
dioxus = { version = "0.6", features = ["web"] }
dioxus-router = "0.6"
manganis = "0.6"

[[example]]
name = "demo"
path = "examples/demo.rs"
required-features = ["web"]

[features]
default = []
web = ["dioxus/web"]
router = ["dioxus-router"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
